--- a/styles/panels.less
+++ b/styles/panels.less
@@ -1,17 +1,18 @@
 // Panels
 // -------------------
 // Overrides: atom/static/panels.less
+
 .panel-heading {
-    border-bottom: 1px solid @panel-heading-border-color;
-    background-color: @panel-heading-background-color;
+  border-bottom: 1px solid @panel-heading-border-color;
+  background-color: @panel-heading-background-color;
 }
 
 .inset-panel {
-    background-color: @inset-panel-background-color;
+  background-color: @inset-panel-background-color;
 
-    .panel-heading {
-        background-color: darken(@inset-panel-background-color, 4%); // lighten(@inset-panel-background-color, 4%);
-    }
+  .panel-heading {
+    background-color: darken(@inset-panel-background-color, 4%); // lighten(@inset-panel-background-color, 4%);
+  }
 }
 
 // Modal -------------------
@@ -30,7 +31,7 @@ atom-panel.modal {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(33, 37, 41, .95); // rgba(255, 255, 255, .95);
+  background: rgba(33, 37, 41, .95);
 }
 
 atom-panel.modal > .select-list {
