--- a/styles/helpers.less
+++ b/styles/helpers.less
@@ -1,3 +1,4 @@
+// Set color based on background color
 .color-contrast(@background) {
   color: contrast(@background,
     lighten(@background, 35%),
