--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -1,25 +1,22 @@
-
 @import "traits.less";
 
 // Pane blur.
 atom-pane:not(.active) {
   .tab-bar .tab.active {
-    // border-top: 1px solid transparent;
     color: @text-color-subtle;
   }
 }
 
-// atom-pane .tab-bar[is="atom-tabs"] li.tab.sortable[is="tabs-tab"] .title {
-//   pointer-events: none; //
-// }
-
 // TAB SPLASH
+
 atom-pane.active .tab-bar .tab.active {
   border-top: 2px solid @splash-color;
 }
+
 .tab.modified  > .icon:before {
   color: @splash-color;
 }
+
 .medium-maroon, .medium-red, .medium-orange, .medium-yellow,
 .dark-blue {
   &.icon:before {
@@ -39,102 +36,102 @@ atom-dock .tab-bar .tab {
 // Overrides: atom/tabs
 
 .tab-bar {
-    background-color: @tab-bar-background-color;
-    border-top: 1px solid @base-border-color;
-    margin: 0; // 0 0 5px 0;
-    z-index: 10; //
+  background-color: @tab-bar-background-color;
+  border-top: 1px solid @base-border-color;
+  margin: 0;
+  z-index: 10;
 
-    .title;
+  .title;
 
-    .tab {
-        color: @text-color-subtle;
-        height: @tab-height;
-        line-height: @tab-height;
-        font-size: @font-size;
-        padding-right: 10px;
-        border-top: 1px solid transparent;
+  .tab {
+    color: @text-color-subtle;
+    height: @tab-height;
+    line-height: @tab-height;
+    font-size: @font-size;
+    padding-right: 10px;
+    border-top: 1px solid transparent;
+    text-transform: uppercase;
+    font-size: 11px;
+    transition: all 150ms ease-out;
+    z-index: 100;
 
-        text-transform: uppercase;
-        font-size: 11px;
-
-        transition: all 150ms ease-out;
-
-        z-index: 100;
-
-        &:last-child {
-          border-right: none;
-        }
-
-        .title {
-            // text-align: center;
-
-            .icon {
-                &::before {
-                    font-size: 13px;
-                }
-            }
-        }
-
-        &.active {
-            flex: 1;
-            color: @text-color-selected;
-            border-top: 1px solid @tab-border-color-active;
-            font-weight: bold;
-
-            .title {
-                padding: 0;
-            }
-        }
-        // Modified Icon (the blue circle) -------------------
-
-        &.modified {
-            .title {
-                color: @base-action-color;
-            }
-        }
-
-        &.modified:not(:hover) .close-icon {
-            top: 50%;
-            right: @component-padding + 4px; // 4px -> half of icon size
-            margin-top: -3px;
-            border-color: @base-action-color; // @text-color-info;
-        }
-
-        &.modified:hover .close-icon {
-            color: currentColor;
-        }
-        // Close Icon (the X) -------------------
-
-        .close-icon {
-            opacity: .2;
-            &::before {
-                text-align: center;
-            }
-
-            &:hover {
-                color: @text-color-selected;
-            }
-        }
-
-        &.active .close-icon:hover {
-            color: @text-color;
-        }
-        // Dragging -------------------
-        // Styles get applied while dragging a tab
-        &.is-dragging {
-            background: darken(@tab-background-color, 10%);
-            border-color: transparent;
-            opacity: 0.5;
-
-            & .close-icon {
-                visibility: hidden;
-            }
-        }
-
-        &:hover {
-            .close-icon {
-                opacity: 1;
-            }
-        }
+    &:last-child {
+      border-right: none;
     }
+
+    .title {
+      .icon {
+        &::before {
+          font-size: 13px;
+        }
+      }
+    }
+
+    &.active {
+      flex: 1;
+      color: @text-color-selected;
+      border-top: 1px solid @tab-border-color-active;
+      font-weight: bold;
+
+      .title {
+        padding: 0;
+      }
+    }
+
+    // Modified Icon (the blue circle) -------------------
+
+    &.modified {
+      .title {
+        color: @base-action-color;
+      }
+    }
+
+    &.modified:not(:hover) .close-icon {
+      top: 50%;
+      right: @component-padding + 4px; // 4px -> half of icon size
+      margin-top: -3px;
+      border-color: @base-action-color;
+    }
+
+    &.modified:hover .close-icon {
+      color: currentColor;
+    }
+
+    // Close Icon (the X) -------------------
+
+    .close-icon {
+      opacity: .2;
+
+      &::before {
+        text-align: center;
+      }
+
+      &:hover {
+        color: @text-color-selected;
+      }
+    }
+
+    &.active .close-icon:hover {
+      color: @text-color;
+    }
+
+    // Dragging -------------------
+    // Styles get applied while dragging a tab
+
+    &.is-dragging {
+      background: darken(@tab-background-color, 10%);
+      border-color: transparent;
+      opacity: 0.5;
+
+      & .close-icon {
+        visibility: hidden;
+      }
+    }
+
+    &:hover {
+      .close-icon {
+        opacity: 1;
+      }
+    }
+  }
 }
