--- a/styles/tooltips.less
+++ b/styles/tooltips.less
@@ -1,38 +1,37 @@
 // Tooltips
 // -------------------
 // Overrides: Bootstrap's `.tooltip`.
+
 .tooltip {
-    .tooltip-inner {
-        line-height: 1;
-        padding: 0.75em;
-        white-space: nowrap;
-        max-width: none;
-        // color: @text-color-selected; // #FFF;
-        background: @splash-color;
-        .color-contrast(@splash-color);
-    }
+  .tooltip-inner {
+    line-height: 1;
+    padding: 0.75em;
+    white-space: nowrap;
+    max-width: none;
+    background: @splash-color;
+    .color-contrast(@splash-color);
+  }
 
-    &.top .tooltip-arrow {
-      border-top-color: @splash-color;
-    }
+  &.top .tooltip-arrow {
+    border-top-color: @splash-color;
+  }
 
-    &.bottom .tooltip-arrow {
-      border-bottom-color: @splash-color;
-    }
+  &.bottom .tooltip-arrow {
+    border-bottom-color: @splash-color;
+  }
 
-    &.left .tooltip-arrow {
-      border-left-color: @splash-color;
-    }
+  &.left .tooltip-arrow {
+    border-left-color: @splash-color;
+  }
 
-    &.right .tooltip-arrow {
-      border-right-color: @splash-color;
-    }
+  &.right .tooltip-arrow {
+    border-right-color: @splash-color;
+  }
 
-    .keystroke {
-        padding: 0.15em 0.4em;
-        margin: 0 -.3em 0 0.25em;
-        // border-radius: max(2px, @component-border-radius / 2);
-        color: @text-color-selected; // #FFF;
-        background: @background-color-selected;
-    }
+  .keystroke {
+    padding: 0.15em 0.4em;
+    margin: 0 -.3em 0 0.25em;
+    color: @text-color-selected;
+    background: @background-color-selected;
+  }
 }
