Splash of color and syntax theme use

--- a/index.less
+++ b/index.less
@@ -1,7 +1,10 @@
 // UI Theme
 // -------------------
+
 @import "styles/ui-variables";
 @import "styles/helpers";
+
+@import "ui-syntax-include";
 
 @import "styles/base";
 @import "styles/buttons";
