--- a/styles/panels.less
+++ b/styles/panels.less
@@ -31,7 +31,7 @@ atom-panel.modal {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(33, 37, 41, .95);
+  background: fade(@base-background-color, 95%);
 }
 
 atom-panel.modal > .select-list {
