--- a/styles/ui-syntax.less
+++ b/styles/ui-syntax.less
@@ -14,15 +14,15 @@ atom-workspace.workspace,
 //   background: @syntax-background-color !important;
 //   color: @syntax-text-color !important;
 //
-//   /deep/ .indent-guide {
+//   .indent-guide {
 //     color: rgba(255,255,255,0.035);
 //   }
 //
-//   /deep/ .selection .region {
+//   .selection .region {
 //     background: @syntax-selection-color !important;
 //   }
 //
-//   /deep/ .gutter {
+//   .gutter {
 //     background: transparent;
 //     border: none;
 //
