--- a/styles/base.less
+++ b/styles/base.less
@@ -35,29 +35,29 @@ atom-pane-container atom-pane .item-views > * {
 // Scrollbars ------------------------------------
 
 .scrollbars-visible-always {
-  /deep/ ::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
   }
 
-  /deep/ ::-webkit-scrollbar-track {}
+  ::-webkit-scrollbar-track {}
 
-  /deep/ ::-webkit-scrollbar-thumb {
+  ::-webkit-scrollbar-thumb {
     border-radius: 5px;
     border: 2px solid transparent;
     background: @base-border-color;
     background-clip: content-box;
   }
 
-  /deep/ ::-webkit-scrollbar-corner {}
+  ::-webkit-scrollbar-corner {}
 
-  /deep/ ::-webkit-scrollbar-thumb:vertical:active {
+  ::-webkit-scrollbar-thumb:vertical:active {
     border-radius: 0;
     border-left-width: 0;
     border-right-width: 0;
   }
 
-  /deep/ ::-webkit-scrollbar-thumb:horizontal:active {
+  ::-webkit-scrollbar-thumb:horizontal:active {
     border-radius: 0;
     border-top-width: 0;
     border-bottom-width: 0;
