--- a/styles/lists.less
+++ b/styles/lists.less
@@ -3,6 +3,12 @@
 // Used in different places, like the Tree View, Commmand Palette etc.
 // Overrides: atom/static/lists.less
 
+.list-group, .list-tree {
+  .selected::before {
+    background-color: @background-color-selected;
+  }
+}
+
 // List Group -------------------
 
 .list-group {
